// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should render Text with center textAlign 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessible={true}
    color="surface.text.gray.normal"
    data-blade-component="text"
    fontFamily="text"
    fontSize={100}
    fontStyle="normal"
    fontWeight="regular"
    lineHeight={100}
    style={
      [
        {
          "color": "hsla(212, 39%, 16%, 1)",
          "fontFamily": "Inter",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 20,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textAlign": "center",
          "textDecorationLine": "none",
        },
      ]
    }
    textAlign="center"
  >
    Displaying some text
  </Text>
</View>
`;

exports[`<Text /> should render Text with color 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessible={true}
    color="surface.text.gray.muted"
    data-blade-component="text"
    fontFamily="text"
    fontSize={100}
    fontStyle="normal"
    fontWeight="regular"
    lineHeight={100}
    style={
      [
        {
          "color": "hsla(211, 22%, 56%, 1)",
          "fontFamily": "Inter",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 20,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying some text
  </Text>
</View>
`;

exports[`<Text /> should render Text with default properties 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessible={true}
    color="surface.text.gray.normal"
    data-blade-component="text"
    fontFamily="text"
    fontSize={100}
    fontStyle="normal"
    fontWeight="regular"
    lineHeight={100}
    style={
      [
        {
          "color": "hsla(212, 39%, 16%, 1)",
          "fontFamily": "Inter",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 20,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying some text
  </Text>
</View>
`;

exports[`<Text /> should render Text with variant "body" 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessible={true}
    color="surface.text.gray.normal"
    data-blade-component="text"
    fontFamily="text"
    fontSize={100}
    fontStyle="normal"
    fontWeight="semibold"
    lineHeight={100}
    numberOfLines={3}
    style={
      [
        {
          "color": "hsla(212, 39%, 16%, 1)",
          "fontFamily": "Inter",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "600",
          "letterSpacing": 0,
          "lineHeight": 20,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying some text
  </Text>
</View>
`;

exports[`<Text /> should render Text with variant "body" and contrast "high" 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessible={true}
    color="surface.text.gray.normal"
    data-blade-component="text"
    fontFamily="text"
    fontSize={100}
    fontStyle="normal"
    fontWeight="semibold"
    lineHeight={100}
    numberOfLines={3}
    style={
      [
        {
          "color": "hsla(212, 39%, 16%, 1)",
          "fontFamily": "Inter",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "600",
          "letterSpacing": 0,
          "lineHeight": 20,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying some text
  </Text>
</View>
`;

exports[`<Text /> should render Text with variant "body" and size "small" 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessible={true}
    color="surface.text.gray.normal"
    data-blade-component="text"
    fontFamily="text"
    fontSize={75}
    fontStyle="normal"
    fontWeight="semibold"
    lineHeight={75}
    numberOfLines={3}
    style={
      [
        {
          "color": "hsla(212, 39%, 16%, 1)",
          "fontFamily": "Inter",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "600",
          "letterSpacing": 0,
          "lineHeight": 18,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying some text
  </Text>
</View>
`;

exports[`<Text /> should render Text with variant "caption" 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <Text
    accessible={true}
    color="surface.text.gray.normal"
    data-blade-component="text"
    fontFamily="text"
    fontSize={100}
    fontStyle="normal"
    fontWeight="semibold"
    lineHeight={100}
    style={
      [
        {
          "color": "hsla(212, 39%, 16%, 1)",
          "fontFamily": "Inter",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "600",
          "letterSpacing": 0,
          "lineHeight": 20,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying some text
  </Text>
</View>
`;
